--- a/kadai5-1.html
+++ b/kadai5-1.html
@@ -13,10 +13,12 @@
     <div id="result">結果はここに表示</div>
     <script>
         async function zip_api(myForm) {
-            const endpoint = "https://zipcloud.ibsnet.co.jp/api/search";
+            const endpoint = await fetch("https://zipcloud.ibsnet.co.jp/api/search?zipcode=" + myForm.zipcode.value);
+            const text = await endpoint.text();
+            const data = JSON.parse(text);
             // ここにコードを書く
             // zipcloudのAPI呼び出して結果を表示する
-            document.getElementById("result").innerHTML =  myForm.zipcode.value; // 現状ではそのまま表示しているだけ
+            document.getElementById("result").innerHTML =  myForm.zipcode.value // 現状ではそのまま表示しているだけ
         }
     </script>
 </body>
