--- a/kadai5-1.html
+++ b/kadai5-1.html
@@ -18,7 +18,7 @@
             const data = JSON.parse(text);
             // ここにコードを書く
             // zipcloudのAPI呼び出して結果を表示する
-            document.getElementById("result").innerHTML =  myForm.zipcode.value // 現状ではそのまま表示しているだけ
+            document.getElementById("result").innerHTML =  data.results[0].address1 + data.results[0].address2 + data.results[0].address3; 
         }
     </script>
 </body>
