--- a/kadai5-2.html
+++ b/kadai5-2.html
@@ -17,8 +17,7 @@
             const text = await endpoint.text();
             const data = JSON.parse(text);
             // ここにコードを書く
-            document.getElementById("result").innerHTML += myForm.form_data.value+"<br />";
-            document.apiform.reset();
+            document.getElementById("result").innerHTML = data.name;
         }
     </script>
 </body>
